site plan added

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Rafting Site Plan</h1>
+    <h1>Dry Oar Rafting</h1>
     <h2>James Strobel</h2>
     <h2>WDD 130-1</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,11 +20,12 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>
+    This website’s primary purpose is to build revenue by promoting our tours and offering an easy booking system, while also sharing information on our services, safety, and the adventure of rafting. Through engaging content and customer reviews, we aim to attract outdoor enthusiasts and create a hub for the rafting community.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Our target audience includes outdoor enthusiasts, families, and adventure-seekers, looking for safe, exciting rafting experiences and easy booking options.</p>
     <!-- change this -->
 
     <hr />
@@ -67,11 +68,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Poppins
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Lato
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
