--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -58,7 +58,7 @@
         <td class="primary">#388087</td>
         <td class="secondary">#6FB3B8</td>
         <td class="accent1">#BADFE7</td>
-        <td class="accent2">#17252A</td>
+        <td class="accent2">#C2EDCE</td>
       </tr>
     </table>
 
