--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="positioning/positioning.html">Positioning</a>
+    <a href="portfolio/site-plan.html"></a>
 </body>
 </html>
