--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
+    <img src="images/Screenshot 2024-11-05 at 1.38.13 PM.png" alt="Page 2 wire Frame">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
