--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Education <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Experience  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,40 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        I am a Computer Science student at Brigham Young University with a strong passion for software development and engineering. My goal is to combine my academic knowledge and technical skills with practical, real-world applications, focusing on software engineering, mobile app development, and system design. I am eager to engage in innovative projects where I can collaborate with diverse teams, learn from experienced professionals, and contribute to meaningful technological advancements. I am open to opportunities that allow me to apply my skills in problem-solving, coding, and development while continuing to grow and evolve as a professional in the tech industry.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="img/profile-modified.png" alt="Picture of Me">
+        <img class="home-img-2" src="img/mohammad-rahmani-8qEB0fTe9Vw-unsplash.jpg" alt="Image of Mac with Code">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Education</h3>
       <p>
-        [Written copy for the Page 2 here]
+        At Brigham Young University in Provo, Utah, I pursued a Bachelor of Science in Computer Science from June 2022 to December 2023. During my time there, I built a solid foundation in programming principles, data structures, and algorithms, while also gaining hands-on experience with project-based learning. My coursework included advanced topics in computer science that enhanced my problem-solving skills and prepared me for more specialized work in software development. This experience was pivotal in shaping my technical abilities and sparking my interest in development.
+      </p>
+      <p>
+        Currently, I am continuing my studies toward a Bachelor of Science in Computer Science at Brigham Young University-Idaho in Rexburg, Idaho. Starting in August 2024, I have been able to deepen my knowledge of software engineering principles and gain additional practical experience in areas like database management, application development, and teamwork within technical environments. My education here is complemented by a focus on collaborative learning, which has strengthened my ability to work effectively within development teams.
+      </p>
+      <p>
+        In the summer of 2024, I completed the CodePath Technical Interview Course, where I developed essential skills for technical interviews. The course focused on data structures, algorithms, and problem-solving strategies, helping me improve my coding efficiency and preparing me to approach complex coding challenges with confidence. This experience strengthened my technical foundation and equipped me with practical strategies for succeeding in competitive technical assessments.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="img/byu-logo.png" alt="BYU Logo">
+        <img src="img/byui-logo.png" alt="BYUI Logo">
+        <img src="img/codepath-logo.jpg" alt="CodePath Logo">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Experience</h3>
       <p>
-        [Written copy for the Page 3 here]
+        As a Software Engineering Intern at Envelope Money from March to June 2024 in San Francisco, CA, I contributed to the front-end development of a mobile application for iOS using the Flutter framework. One of my primary tasks was designing and implementing a responsive hamburger menu using HTML, CSS, and JavaScript, enhancing navigation for users across mobile and desktop platforms. This feature is currently live and actively utilized by visitors to Envelope’s website. I collaborated closely with team members, leveraging version control systems like Git to organize project modifications and effectively distribute tasks. Additionally, I participated in code reviews, where I received valuable feedback from senior engineers, allowing me to refine my coding practices and deepen my technical expertise.
+      </p>
+      <p>
+        As a Database Assistant at Teton Radiology from August 2019 to March 2022 in Idaho Falls, ID, I managed the complete digitization of physical medical reports, transferring them onto a comprehensive database. Through this role, I identified a more efficient approach to report processing, allowing me to handle them twice as quickly as my predecessor. In addition to database management, I supported the IT department by assisting with software installations, computer setups, system cloning, and various system configurations. I also explored ways to visualize and transmit test result reports to system administrators using HTML, JavaScript, and CSS.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="img/env.logo.png" alt="Envelope-Money Logo">
+        <img src="img/teton-radiology-logo.jpeg" alt="teton-radiology Logo">
 
       </ul>
       <hr>
