--- a/wwr/subpage.html
+++ b/wwr/subpage.html
@@ -23,39 +23,24 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/ezra-jeffrey-comeau-CdUUiMwDSGk-unsplash.jpg" alt="People enjoying white water rafting">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
+                <h1 class="home-title">River Tours</h1>
+                <h4>Experience the thrill of rafting on our exciting river tours! Whether you're a first-time adventurer or a seasoned pro, we offer a range of rafting options to suit every level of experience.</h4>
                 <div class="button-box">
                     <a class="book" href="rates.html">Book Now</a>
                 </div>
 
             </section>
         </div>
-        <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Rivers</h2>
+        <main class="river-grid">
+            <h2 class="river-msg">Rivers</h2>
+            <section class="rivers-card-2">
+                <img class="river-img" src="images/firdouss-ross-THsw2pd2gX0-unsplash.jpg" alt="river in forest"> 
             </section>
-            <section class="camping-card">
-                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-                <img class="icon" src="images/fire_icon.png" alt="fire icon">
-                <h2>Camping</h2>
-            </section>
-            <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="images/oars.png" alt="oars icon">
-                <h2>Rapids</h2>
-            </section>
-            <div id="background"></div>
-            <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
-            <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-                <a class="join" href="rivers.html">Join Us</a>
+            <section class="msg-card">
+                <p>Experience the thrill of rafting on our exciting river tours! <br> <br>Whether you're a first-time adventurer or a seasoned pro, we offer a range of rafting options to suit every level of experience. <br> <br> Choose from gentle, scenic floats or adrenaline-pumping rapids for an unforgettable adventure. <br> <br> Our expert guides will ensure your safety while providing insights into the natural surroundings and local wildlife. <br> <br> With half-day, full-day, and multi-day options available, you can tailor your river experience to your preferences. <br> <br> Grab your paddle and get ready for the ultimate rafting adventure!</p>
             </section>
         </main>
         <footer>
