site-plan-wireframe

--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -170,21 +170,23 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Home page is an about me page set up similar to other popular portfolios
       </p>
-      <img src="#" alt="home page wireframe">
+      <a href="https://codehalweb.com/personal-portfolio-website-html-css/#google_vignette">Example Portfolio</a>
+      <p></p>
+      <img src="img/home-page.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Page 2 and three will have similar frame but will change hero img/description
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="img/education-page.png" alt="education page wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Projects button takes user to my Github
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="img/experience-page.png" alt="experience page wireframe">
     </main>
   </body>
 
