main-index-update

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <a href="positioning/positioning.html">Positioning</a>
     <a href="portfolio/site-plan.html">Site-Plan</a>
+    <a href="wwr/index.html"></a>
+    <a href="portfolio/index.html"></a>
 </body>
 </html>
