--- a/old/site-plan.html
+++ b/old/site-plan.html
@@ -35,7 +35,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="favicon_io (3)/favicon-32x32.png" alt="Logo image">
+      <img src="img/favicon_io (3)/favicon-32x32.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Nunito  <!-- change this -->
+        Heading Font: Bodoni  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Nunito  <!-- change this -->
+        Paragraph Font: Roboto  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -130,7 +130,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="img/profile-modified.png" alt="Picture of Me">
-        <!-- <img class="home-img-2" src="img/mohammad-rahmani-8qEB0fTe9Vw-unsplash.jpg" alt="Image of Mac with Code"> -->
+        <img class="home-img-2" src="img/mohammad-rahmani-8qEB0fTe9Vw-unsplash.jpg" alt="Image of Mac with Code">
 
       </ul>
       <h3>Education</h3>
@@ -144,9 +144,9 @@
         In the summer of 2024, I completed the CodePath Technical Interview Course, where I developed essential skills for technical interviews. The course focused on data structures, algorithms, and problem-solving strategies, helping me improve my coding efficiency and preparing me to approach complex coding challenges with confidence. This experience strengthened my technical foundation and equipped me with practical strategies for succeeding in competitive technical assessments.
       </p>
       <p>Images for the Page 2</p>
-        <img src="img/byu.png" alt="BYU Logo">
-        <img src="img/byu-i.png" alt="BYUI Logo">
-        <!-- <img src="img/codepath-logo.jpg" alt="CodePath Logo"> -->
+        <img src="img/byu-logo.png" alt="BYU Logo">
+        <img src="img/byui-logo.png" alt="BYUI Logo">
+        <img src="img/codepath-logo.jpg" alt="CodePath Logo">
 
       </ul>
       <h3>Experience</h3>
