--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="positioning/positioning.html">Positioning</a>
     <a href="portfolio/site-plan.html">Site-Plan</a>
     <a href="wwr/index.html"></a>
-    <a href="portfolio/index.html"></a>
+    <a href="portfolio/index.html">portfolio</a>
 </body>
 </html>
