Fixed HTML validation errors

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -124,7 +124,7 @@
             <!-- <h2 class="heading">Personal <span>Projects</span></h2> -->
             <!-- <a class="scheme" href="https://github.com/StrobeCode/scheme-interpreter"><img class="scheme-logo" src="img/scheme.png" alt="Scheme Language Logo"></a> -->
 
-         </section>
+         <!-- </section> -->
 
          <footer class="footer">
             <div class="footer-content">
